Add internalClusterTestWithGenFiles gradle task (#2347)