@@ -73,6 +73,21 @@ tasks {
         jvmArgs("--add-opens=java.base/java.io=ALL-UNNAMED")
     }
 
+    /**
+     * Same as internalClusterTest but with tracking of generational file setting enabled
+     */
+    val internalClusterTestWithGenFiles = register<Test>("internalClusterTestWithGenFiles") {
+        val sourceSet = sourceSets.getByName(InternalClusterTestPlugin.SOURCE_SET_NAME)
+        setTestClassesDirs(sourceSet.getOutput().getClassesDirs())
+        setClasspath(sourceSet.getRuntimeClasspath())
+        jvmArgs("-XX:+UseG1GC", "--add-opens=java.base/java.io=ALL-UNNAMED")
+        systemProperty("es.test.stateless.generational_files_tracking.enabled", "true")
+    }
+
+    check {
+        dependsOn(internalClusterTestWithGenFiles)
+    }
+
     yamlRestTest {
         usesDefaultDistribution()
     }
